@@ -5,7 +5,7 @@
 
 <widget class="GtkDialog" id="GiverPrefsDialog">
   <property name="visible">True</property>
-  <property name="title" translatable="yes">dialog1</property>
+  <property name="title" translatable="yes">Giver Preferences</property>
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
   <property name="window_position">GTK_WIN_POS_NONE</property>
   <property name="modal">False</property>
@@ -99,7 +99,7 @@
 		  <child>
 		    <widget class="GtkLabel" id="label5">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">User Name:</property>
+		      <property name="label" translatable="yes">Display Name:</property>
 		      <property name="use_underline">False</property>
 		      <property name="use_markup">False</property>
 		      <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -122,7 +122,7 @@
 		  </child>
 
 		  <child>
-		    <widget class="GtkEntry" id="entry2">
+		    <widget class="GtkEntry" id="display_name">
 		      <property name="visible">True</property>
 		      <property name="can_focus">True</property>
 		      <property name="editable">True</property>
@@ -422,7 +422,7 @@
 			      </child>
 
 			      <child>
-				<widget class="GtkEntry" id="entry3">
+				<widget class="GtkEntry" id="gravatar_email">
 				  <property name="visible">True</property>
 				  <property name="can_focus">True</property>
 				  <property name="editable">True</property>
@@ -526,7 +526,7 @@
 			      </child>
 
 			      <child>
-				<widget class="GtkEntry" id="entry4">
+				<widget class="GtkEntry" id="photo_uri_location">
 				  <property name="visible">True</property>
 				  <property name="can_focus">True</property>
 				  <property name="editable">True</property>
