@@ -1,3 +1,8 @@
+2007-06-28  Scott Reeves <sreeves@novell.com> 
+
+	* src/PreferencesDialog.cs, data/glade/giver-prefs.glade: Finish
+	  loading preferences
+
 2007-06-28  Calvin Gaisford <calvinrg@gmail.com> 
 
 	* src/ServiceInfo.cs: Added ID
